# time

./: time.cabal
benchmark/: Main.hs  time.cabal
lib/Data/Time/: Format.hs
lib/Data/Time/Clock/: UTC.hs
lib/Data/Time/Format/: Part.hs
lib/Data/Time/LocalTime/: LocalTime.hs  TimeOfDay.hs
test/Test/: TestFormat.hs  TestParseTime.hs
