name:           time-bench
version:        0.1.0.0
author:         Winter
homepage:       https://github.com/haskell/time
bug-reports:    https://github.com/haskell/time/issues
cabal-version:  >=1.10
build-type:          Simple


executable time-bench
    hs-source-dirs: ../lib, .
    main-is: Main.hs
    default-language: Haskell2010
    if impl(ghc)
        default-extensions:
            Rank2Types
            DeriveDataTypeable
            StandaloneDeriving
        cpp-options: -DLANGUAGE_Rank2Types -DLANGUAGE_DeriveDataTypeable -DLANGUAGE_StandaloneDeriving
    else
        if impl(hugs)
            default-extensions: Rank2Types
            cpp-options: -DLANGUAGE_Rank2Types
    ghc-options: -Wall -fwarn-tabs
    build-depends:
        base >= 4.7 && < 5,
        deepseq >= 1.1,
        time,
        criterion
    if os(windows)
        build-depends: Win32
    default-extensions:    CPP
    c-sources: ../lib/cbits/HsTime.c
    include-dirs: ../lib/include
    if os(windows)
        install-includes:
            HsTime.h
    else
        install-includes:
            HsTime.h
            HsTimeConfig.h

    other-modules:
        Data.Time.Calendar,
        Data.Time.Calendar.MonthDay,
        Data.Time.Calendar.OrdinalDate,
        Data.Time.Calendar.WeekDate,
        Data.Time.Calendar.Julian,
        Data.Time.Calendar.Easter,
        Data.Time.Clock,
        Data.Time.Clock.POSIX,
        Data.Time.Clock.TAI,
        Data.Time.LocalTime,
        Data.Time.Format,
        Data.Time.Format.Part,
        Data.Time
        Data.Time.Calendar.Private,
        Data.Time.Calendar.Days,
        Data.Time.Calendar.Gregorian,
        Data.Time.Calendar.JulianYearDay,
        Data.Time.Clock.Scale,
        Data.Time.Clock.UTC,
        Data.Time.Clock.CTimeval,
        Data.Time.Clock.CTimespec,
        Data.Time.Clock.UTCDiff,
        Data.Time.LocalTime.TimeZone,
        Data.Time.LocalTime.TimeOfDay,
        Data.Time.LocalTime.LocalTime,
        Data.Time.Format.Parse
        Data.Time.Format.Locale
        Data.Time.Format.Part
